2007-12-11  Akim Demaille  <demaille@gostai.com>

	More factoring.
	There is nothing like factoring to understand :(
	* src/ubinder.hh, src/ubinder.hxx (removeMonitor): Rename as...
	(remove_monitor): this.
	(unbind_monitor): new.
	* src/uconnection.cc, src/uobj.cc: Adjust to use them.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Less includes.
	* include/kernel/utypes.hh: Remove useless includes.
	Adjust dependencies.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	uwait-counter.hh.
	* src/uwait-counter.hh: New.
	* include/kernel/utypes.hh: Extracted from here.
	* include/kernel/fwd.hh: Adjust.
	* src/Makefile.am: Ditto.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Fix libport use.
	* src/Makefile.am: here.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Fix previous patch.
	* src/ucommand.cc: here.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Don't use ASSERT.
	* src/ucommand.cc: here.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Factor.
	* src/ubinder.hh, src/ubinder.hxx (removeMonitor): Factored from...
	* src/uconnection.cc, src/uobj.cc: here.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Use FOREACH.
	* src/ubinder.cc: here.
	I'm tracking duplicate code.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	this-> is useless.
	* src/uconnection.cc: At least in these cases.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	__ craze.
	* src/uconnection.cc: Remove useless __ prefixes.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	send (std::string).
	* include/kernel/uconnection.hh (_Send): Remove incorrect const.
	(send(std::string)): New.
	* src/uobj.cc: Use it.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Comment.
	* include/kernel/uconnection.hh: Some bits.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Simplify __ crazyness.
	* include/kernel/uconnection.hh: Remove __ prefixes.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Fix.
	* src/unamedparameters.hxx: Fix type name.